testdata/baselines/reference/submodule/conformance/jsdocAugments_withTypeParameter.errors.txt
/b.js(2,17): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.d.ts (0 errors) ====
    declare class A<T> { x: T }
    
==== /b.js (1 errors) ====
    /** @augments A<number> */
    class B extends A {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        m() {
            return this.x;
        }
    }
    